# rust-ffmpeg-sys

./: Cargo.toml  README.md  build.rs
include/libavutil/: ffversion.h
src/: defines.h  lib.rs
