[package]
name = "mirror-ffmpeg-sys"
version = "0.1.6"
edition = "2021"
description = "mirror ffmpeg sys crate"
license = "MIT"

[build-dependencies]
anyhow = "1.0.80"
bindgen = { version = "0.70", default-features = false, features = ["runtime"] }

[features]
default = []
avcodec = []
avdevice = []
avformat = []
avfilter = []
avutil = []
swresample = []
swscale = []
postproc = []

# hardware
qsv = []
vaapi = []
